# converter_cpp

./: .gitignore  CMakeLists.txt  README.md  compile.sh  filemanagerwindow.cpp  filemanagerwindow.h  main.cpp  main.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
dst/: run_app
include/: FileHandler.hpp  config.hpp  constant.hpp  filemanagerwindow.h  locale.hpp  logging.hpp
src/: FileHandler.cpp  filemanagerwindow.cpp  main.cpp  run.cpp
test/: ISO-8859-5.txt  UTF16BE.txt  UTF32BE.txt  UTF32LE.txt  cp437.txt
